[gd_scene load_steps=4 format=3 uid="uid://chat_bubble"]

[ext_resource type="Script" path="res://nodes/ui/chat/bubble/chat_bubble.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://nodes/ui/chat/bubble/chat_bubble.png" id="2_bubble"]
[ext_resource type="FontFile" path="res://nodes/ui/chat/bubble/NotoColorEmoji.ttf" id="3_emoji_font"]

[node name="ChatBubble" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 50.0
mouse_filter = 2
script = ExtResource("1_script")

[node name="BubbleSprite" type="Sprite2D" parent="."]
position = Vector2(30, 25)
scale = Vector2(0.1875, 0.25)
texture = ExtResource("2_bubble")

[node name="EmojiLabel" type="RichTextLabel" parent="BubbleSprite"]
offset_left = -160.0
offset_top = -60.0
offset_right = 160.0
offset_bottom = 100.0
theme_override_fonts/normal_font = ExtResource("3_emoji_font")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]ðŸ‘‹[/center]"
fit_content = true
scroll_active = false
